--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
-.title {
-  color: green;
-  font-size: 16px;
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.home {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100vh;
+  background-color: rgb(28, 29, 65);
+  color: #fff;
 }
